--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -1,11 +1,11 @@
 @import "../../node_modules/@angular/material/theming";
 @include mat-core();
 
-$night-app-primary: mat-palette($mat-grey, 900);
-$night-app-accent: mat-palette($mat-orange, A200, A100, A400);
+$night-app-primary: mat-palette($mat-indigo, 900);
+$night-app-accent: mat-palette($mat-yellow, 100, 200, 300);
 $night-app-warn: mat-palette($mat-red);
 
-$night-app-theme: mat-dark-theme(
+$night-app-theme: mat-light-theme(
   $night-app-primary,
   $night-app-accent,
   $night-app-warn
