added some parts of assignment 4

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -185,8 +185,19 @@
         <td>Wachtwoorden moeten naar een bepaalde tijd verlopen.</td>
       </tr>
     </table>
-
   </div>
+
+  <h2>ScroogeCoin</h2>
+  <ngx-gallery [options]="galleryOptions" [images]="scroogeCoin"></ngx-gallery>
+
+  <p>
+    UTXO staat voor ‘Unspent Transaction Output’. Het kan gebruikt worden als een Input voor een nieuwe transactie.
+    Een gebruiker krijgt een Output binnen als transactie,
+    zodra een gebruiker het ‘coin’ wilt overmaken naar een ander gebruiker dan veranderd de output naar een input en wordt er een nieuw transactie aangemaakt.
+    UTXO komen in verschillende waardes, niet net als de Euro, Euro ‘s komen in waarden van 5, 10, 20, 50, 100, 200 en 500.
+  </p>
+
+  <h2></h2>
 </div>
 
 
