--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
   transform: none !important;
 }
 .container{
-  width:1000px;
+  width: 1000px;
   margin: 0px auto;
   padding-bottom: 20px;
 }
@@ -15,4 +15,8 @@ table, th, td {
 
 td{
   padding: 5px;
+}
+
+h4{
+  text-decoration: underline;
 }
